# autolease

./: .gitignore  README.md  TODO.md  USAGE.md  config.example.yaml  pyproject.toml
autolease/: __init__.py  cli.py  config.py  pool.py  queue.py  slurm.py  sync.py  tui.py
tests/: conftest.py  test_check_remote.py  test_cpu_jobs.py  test_dispatch_fit.py  test_gpu_procs.py  test_history.py  test_qos_picking.py  test_schema_migration.py  test_slurm_parsing.py
